# python-twitter-shill-hunter

./: =2.7.0  README.md  pyproject.toml  setup.py
.github/workflows/: codeql.yml
src/twitter_shill_hunter/: __main__.py  gen_logo.py  input.py  shill_hunter.py  tweet_text_extractor.py  twitter_shill_hunter.py
src/twitter_shill_hunter/processors/geo_analysis/: __init__.py  geo_analysis.py
src/twitter_shill_hunter/processors/grammar_analysis/: __init__.py  grammar_analysis.py
src/twitter_shill_hunter/processors/grammar_analysis/dialect_mappings/en/: en-UK.yaml  en-US.yaml
src/twitter_shill_hunter/processors/grammar_analysis/dialect_mappings/fr/: fr-CA.yaml  fr-FR.yaml
src/twitter_shill_hunter/processors/sentiment_analysis/: __init__.py  sentiment_analysis.py
src/twitter_shill_hunter/processors/spelling_analysis/: __init__.py  spelling_analysis.py
tests/: README.md  mock_data.py  run_basic_tests.py  run_tests.py  test_geo_analysis.py  test_grammar_analysis.py  test_input.py  test_sentiment_analysis.py  test_spelling_analysis.py  test_tweet_text_extractor.py  test_twitter_shill_hunter.py
